[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["seth mcfeeters <seth.mcfeeters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hypothesis = "^6.3.0"
pytest = "^6.2.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
